# HIVE_ROBOT_SOFTWARE

./: .gitignore  CMakeLists.txt  README.md
data/: HIVE_MAP_DB_1.txt  HMD_1.txt  HMD_TEST_VESINET.txt  Hive_Map_Database2.xlsx  robot_id.yaml  robot_parameter.yaml  statistique_utilisation.txt
include/: 00_communication.h  00_function.h  00_navigation.h  autopilot_interface.h
nik/: 01_SYSTEM_MANAGER  02_HARDWARE  03_SERVER  04_NAVIGATION  66_EXEMPLE  CMakeCache.txt  Makefile  cmake_install.cmake
robot_management/redis_connector/: redis_communicator.py  redis_constants.py
robot_management/server_communication/: protocol.py  server_connector.py
serverlocal/: app.py  titille_app.py
software/: 01_system.cpp  02_hardware.cpp  03_server.cpp  04_navigation.cpp  05_perception.cpp  05_perception.py  66_tempo.cpp
src/: 00_communication.cpp  00_function.cpp  00_navigation.cpp  autopilot_interface.cpp  serial_port.cpp  udp_port.cpp
stream/: server.py  stream.py
stream/aiohttp_mjpeg/: main.py
